--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj
@@ -163,9 +163,11 @@
     <ClCompile Include="Boss.cpp" />
     <ClCompile Include="Boss2.cpp" />
     <ClCompile Include="Capsule.cpp" />
+    <ClCompile Include="EnemyLifePanel.cpp" />
     <ClCompile Include="Event.cpp" />
     <ClCompile Include="FadeInOutEvent.cpp" />
     <ClCompile Include="FlipEvent.cpp" />
+    <ClCompile Include="FloatingHead.cpp" />
     <ClCompile Include="FramedImageUI.cpp" />
     <ClCompile Include="AnimatedSpriteComponent.cpp" />
     <ClCompile Include="Arm.cpp" />
@@ -269,6 +271,7 @@
     <ClCompile Include="CatalogPanel.cpp" />
     <ClCompile Include="Shotgun.cpp" />
     <ClCompile Include="SoundManager.cpp" />
+    <ClCompile Include="SpawnerBoss.cpp" />
     <ClCompile Include="SpawnerEnemy.cpp" />
     <ClCompile Include="SpriteComponent.cpp" />
     <ClCompile Include="Money.cpp" />
@@ -311,9 +314,11 @@
     <ClInclude Include="CapsuleDistance.h" />
     <ClInclude Include="CapsuleNormal.h" />
     <ClInclude Include="DistanceSpawner.h" />
+    <ClInclude Include="EnemyLifePanel.h" />
     <ClInclude Include="Event.h" />
     <ClInclude Include="FadeInOutEvent.h" />
     <ClInclude Include="FlipEvent.h" />
+    <ClInclude Include="FloatingHead.h" />
     <ClInclude Include="FramedImageUI.h" />
     <ClInclude Include="AnimatedSpriteComponent.h" />
     <ClInclude Include="AnyarothError.h" />
@@ -425,6 +430,7 @@
     <ClInclude Include="ShopItem.h" />
     <ClInclude Include="CatalogPanel.h" />
     <ClInclude Include="Shotgun.h" />
+    <ClInclude Include="SpawnerBoss.h" />
     <ClInclude Include="SpawnerEnemy.h" />
     <ClInclude Include="SoundManager.h" />
     <ClInclude Include="SpriteComponent.h" />
